<resources>
    <string name="app_name">MotionSGDay3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_wakey">Wakey</string>
    <string name="label_selector_title">Let’s get connected to wakey for healthy lifestyle</string>
    <string name="desc_selector">Explore the most elegant way of achieving your morning routine let’s build a healthy life.</string>
    <string name="label_signin">Signin</string>
    <string name="label_signup">Signup</string>
    <string name="label_hii_there">Hii There!!</string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="hint_password">Password</string>
    <string name="label_dont_have_an_account_signup">Dont have an account?</string>
</resources>